Fix horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2360,7 +2360,7 @@ p {
 .nav__burger-line {
   width: 100%;
   height: 2px;
-  background-color: #fff;
+  background-color: #000;
 }
 
 .side-nav {
